<resources>

    <!-- titles -->
    <string name="app_name">4channer</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="fragment_layout">2 Pane Layout</string>
    <string name="thread_list_activity">Thread</string>
    <string name="board_list_activity">Board</string>
    <string name="board_grid_activity">Board</string>
    <string name="title_photogrid_activity">PhotoGrid</string>
    <string name="full_screen_image_activity">View Image</string>
    <string name="post_reply_activity">New Post</string>
    <string name="settings_activity">Settings</string>

    <!-- menus -->
    <string name="settings_menu">Settings</string>
    <string name="help_menu">Help</string>
    <string name="refresh_board_menu">Refresh Board</string>
    <string name="refresh_thread_menu">Refresh Thread</string>
    <string name="new_thread_menu">New Thread</string>
    <string name="add_to_favorites_menu">Add to Favorites</string>
    <string name="download_all_threads_menu">Prefetch All Threads</string>
    <string name="watch_thread_menu">Watch Thread</string>
    <string name="view_as_grid_menu">View As Grid</string>
    <string name="view_as_list_menu">View As List</string>
    <string name="post_reply_menu">Post Reply</string>
    <string name="download_all_images_menu">Save All Images</string>
    <string name="download_image_menu">Save Image</string>
    <string name="set_as_wallpaper_menu">Set as Wallpaper</string>
    <string name="share_image_menu">Share Image</string>
    <string name="post_reply_send_menu">Post Reply</string>

    <!-- board grid tab -->
    <string name="japanese_culture">Japanese Culture</string>
    <string name="interests">Interests</string>
    <string name="creative">Creative</string>
    <string name="adult">Adult</string>
    <string name="other">Other</string>
    <string name="misc">Misc.</string>

    <!-- board activity -->
    <string name="board_activity_refresh">Refreshing...</string>
    <string name="board_activity_couldnt_open_db">Couldn\'t open cache</string>

    <!-- board service -->
    <string name="board_service_couldnt_fetch">Couldn\'t get board</string>
    <string name="board_service_couldnt_read">Couldn\'t read board</string>
    <string name="board_service_couldnt_load">Couldn\'t load board</string>
    <string name="board_service_couldnt_read_db">Couldn\'t read board data</string>

    <!-- thread service -->
    <string name="thread_service_no_thread">Couldn\'t find thread</string>
    <string name="thread_service_not_found">Thread no longer exists</string>
    <string name="thread_service_couldnt_read">Couldn\'t read thread</string>
    <string name="thread_service_couldnt_load">Couldn\'t load thread</string>
    <string name="thread_service_couldnt_read_db">Couldn\'t read thread data</string>

    <!-- full screen image activity -->
    <string name="full_screen_saving_image">Saving image...</string>
    <string name="full_screen_setting_wallpaper">Setting wallpaper...</string>
    <string name="full_screen_save_image_error">Couldn\'t save image, try later</string>
    <string name="full_screen_download_description">Downloaded from 4chan URL:</string>
    <string name="full_screen_image_saved">Image saved</string>
    <string name="full_screen_wallpaper_set">Wallpaper set</string>
    <string name="full_screen_wallpaper_error">Couldn\'t set wallpaper</string>
    <string name="full_screen_share_image_intent">Share Image</string>
    <string name="full_screen_image_shared">Image shared</string>
    <string name="full_screen_sharing_error">Couldn\'t share image</string>

    <!-- post reply activity -->
    <string name="post_reply_title">New Reply</string>
    <string name="post_reply_thread_title">New Thread</string>
    <string name="post_reply_text_hint">Type message here...</string>
    <string name="post_reply_camera_hint">Camera</string>
    <string name="post_reply_picture_hint">Gallery</string>
    <string name="post_reply_rotate_left_hint">Rotate Left</string>
    <string name="post_reply_rotate_right_hint">Rotate Right</string>
    <string name="post_reply_reload_captcha_hint">Reload Captcha</string>
    <string name="post_reply_recaptcha_hint">Type recaptcha text here...</string>
    <string name="post_reply_recaptcha_url_root">http://www.google.com/recaptcha/api/noscript?k=6Ldp2bsSAAAAAAJ5uyx_lx34lJeEpTLVkP5k04qc</string>
    <string name="post_reply_no_board">Can\'t post, unknown board</string>
    <string name="post_reply_added_image">Added image to post</string>
    <string name="post_reply_no_load_camera_image">Couldn\'t load camera image</string>
    <string name="post_reply_no_load_gallery_image">Couldn\'t load gallery image</string>
    <string name="post_reply_no_load_image">Couldn\'t load image</string>
    <string name="post_reply_no_image">Couldn\'t load image</string>
    <string name="post_reply_no_image_rotate">Couldn\'t rotate image</string>
    <string name="post_reply_no_camera">Couldn\'t load camera</string>
    <string name="post_reply_camera_capture">Camera image</string>
    <string name="post_reply_posting">Posting</string>
    <string name="post_reply_captcha_error">Couldn\'t load captcha</string>
    <string name="post_reply_enter_captcha">Enter captcha</string>
    <string name="post_reply_add_image">Add image to post</string>
    <string name="post_reply_add_text_or_image">Add text or image to post</string>
    <string name="post_reply_response_error">Couldn\'t post, unknown response</string>
    <string name="post_reply_no_response">Couldn\'t post, no response</string>
    <string name="post_reply_error">Couldn\'t post</string>
    <string name="post_reply_posted_reply">Posted reply</string>
    <string name="post_reply_posted_thread">Posted new thread</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summ">whether or not you receive watching thread notifications</string>
    <string name="pref_hide_text_only_posts">Hide Text Only Posts</string>
    <string name="pref_hide_text_only_posts_summ">Hide text only posts</string>
    <string name="pref_hide_all_text">Hide All Text</string>
    <string name="pref_hide_all_text_summ">Hide All Text</string>


</resources>
