<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/download_image_menu"
          android:title="@string/download_image_menu"
          android:icon="@drawable/content_save"
          android:showAsAction="always"
            />
    <item android:id="@+id/share_image_menu"
          android:title="@string/share_image_menu"
          android:icon="@drawable/social_share"
          android:showAsAction="always"
            />
    <item android:id="@+id/set_as_wallpaper_menu"
          android:title="@string/set_as_wallpaper_menu"
          android:icon="@drawable/content_picture"
            />
    <item android:id="@+id/settings_menu"
          android:title="@string/settings_menu"
          android:icon="@drawable/action_settings"
            />
    <item android:id="@+id/help_menu"
          android:title="@string/help_menu"
          android:icon="@drawable/action_help"
          />
</menu>
