<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/hide_all_text"
          android:title="@string/pref_hide_all_text"
          android:icon="@drawable/content_picture"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/watch_thread_menu"
          android:title="@string/watch_thread_menu"
          android:icon="@drawable/rating_important"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/download_all_images_menu"
          android:title="@string/download_all_images_menu"
          android:icon="@drawable/av_download"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/settings_menu"
          android:title="@string/settings_menu"
          android:icon="@drawable/action_settings"
            />
    <item android:id="@+id/help_menu"
          android:title="@string/help_menu"
          android:icon="@drawable/action_help"
          />
    <item android:id="@+id/about_menu"
          android:title="@string/about_menu"
          android:icon="@drawable/action_help"
            />
</menu>
