<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh_menu"
          android:title="@string/refresh_menu"
          android:icon="@drawable/navigation_refresh"
          android:showAsAction="always"
            />
    <item android:id="@+id/post_reply_menu"
          android:title="@string/post_reply_menu"
          android:icon="@drawable/social_reply"
          android:showAsAction="always"
            />
    <item android:id="@+id/settings_menu"
          android:title="@string/settings_menu"
          android:icon="@drawable/action_settings"
            />
    <item android:id="@+id/help_menu"
          android:title="@string/help_menu"
          android:icon="@drawable/action_help"
          />
</menu>
