<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/post_reply_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <!--
            <TextView
                android:id="@+id/post_reply_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_reply_title"
                android:textSize="22sp"
                android:textColor="#121212"
                android:layout_gravity="top"
                android:paddingBottom="16dp">
            </TextView>
            -->
            <EditText
                android:id="@+id/post_reply_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_reply_text_hint"
                android:inputType="textMultiLine"
                android:lines="3"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:scrollbars="vertical"
                android:gravity="top|left"
                android:background="@drawable/border_background"
                    >
            </EditText>

            <ImageView
                android:id="@+id/post_reply_image_preview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:visibility="invisible"
                >
            </ImageView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingBottom="16dp">

                <ImageButton
                    android:id="@+id/post_reply_camera_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:hint="@string/post_reply_camera_hint"
                    android:scaleType="centerInside"
                    android:src="@drawable/device_access_camera">
                </ImageButton>

                <ImageButton
                    android:id="@+id/post_reply_picture_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:hint="@string/post_reply_picture_hint"
                    android:src="@drawable/content_picture">
                </ImageButton>

                <ImageButton
                    android:id="@+id/post_reply_rotate_left_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:visibility="invisible"
                    android:hint="@string/post_reply_rotate_left_hint"
                    android:src="@drawable/images_rotate_left">
                </ImageButton>

                <ImageButton
                    android:id="@+id/post_reply_rotate_right_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:visibility="invisible"
                    android:hint="@string/post_reply_rotate_right_hint"
                    android:src="@drawable/images_rotate_right">
                </ImageButton>

            </LinearLayout>

            <WebView
                android:id="@+id/post_reply_recaptcha_webview"
                android:layout_gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
            </WebView>

            <EditText
                android:id="@+id/post_reply_recaptcha_response"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_reply_recaptcha_hint"
                android:textSize="18sp"
                android:gravity="top|left"
                android:inputType="textNoSuggestions"
                android:padding="8dp"
                android:background="@drawable/border_background">
            </EditText>

        </LinearLayout>

    </ScrollView>
